clusterip.yaml

apiVersion: v1
kind: Service
metadata:
  name: jsvc
  labels:
      app: jsvc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
      app: jserver
